<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>bob.fxg</groupId>
	<artifactId>FxGame</artifactId>
	<packaging>jar</packaging>
	<version>0.0.1</version>
	<name>FXG</name>
	<url>https://ciforms.c-intact.biz</url>

	<properties>
		<jdk.version>1.8</jdk.version>

		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>

		<version.compiler>3.7.0</version.compiler>
		<version.assembly>3.2.0</version.assembly>
		<version.surefire>3.0.0-M5</version.surefire>

		<junit.jupiter.version>5.4.2</junit.jupiter.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>repo</id>
			<url>file://${project.basedir}/repo</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- mvn versions:display-dependency-updates -->

		<!--Test -->

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- JavaFx -->

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>11.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>11.0.2</version>
		</dependency>


	</dependencies>

	<build>
		<finalName>fxg</finalName>
		<plugins>
			<!-- mvn versions:display-plugin-updates -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M3</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.0.5</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<!-- configuration>
					<release>11</release>
				</configuration -->
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine> --illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine> --illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.4</version>
				<configuration>
					<mainClass>bob.fxg.BobEngine</mainClass>
					<options>
						<option>--module-path</option>
						<option>C:\\Java\\javafx-sdk-11.0.2\\lib</option>
						<option>--add-modules</option>
						<option>ALL-MODULE-PATH</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</option>
					</options>
					<commandlineArgs>-Xmx1024m</commandlineArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<contributors>
		<contributor>
			<name>Maik Böttcher</name>
			<email>maik@btmx.net</email>
			<roles>
				<role>Developer</role>
			</roles>
			<organization>BOEST</organization>
			<organizationUrl>https://github.com/bobmin</organizationUrl>
		</contributor>
	</contributors>

</project>